tests/syntax_error/number_underscore_suffix_hex.jou
def main() -> int:
    return 0xcafe_  # Error: invalid number or variable name "0xcafe_"
